# windot

./: Cargo.toml  Makefile  PKGBUILD  README.md  install-desktop.sh  windot.desktop
meta/: icon.piskel  windot.desktop
src/: components.rs  config.rs  consts.rs  emoji_ls.rs  main.rs  style.css
