[package]
name = "windot"
version = "0.1.3"
edition = "2021"
license = "MPL-2.0"
description = "Simple emoji picker."
repository = "https://github.com/Lamby777/windot/"
keywords = ["emoji", "picker", "gtk", "clipboard"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
cli-clipboard = "0.4.0"
dirs = "5.0.1"
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
serde = { version = "1.0.204", features = ["derive"] }
emojis = { version = "0.6.3", features = ["serde"] }
serde_json = "1.0.120"
