[package]
name = "windot"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
description = "Simple emoji picker."
repository = "https://github.com/Lamby777/windot/"
keywords = ["emoji", "picker", "gtk", "clipboard"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
arboard = "3.4.1"
dirs = "5.0.1"
emojis = { version = "0.6.4", features = ["serde"] }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_14"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.43.0", features = ["full"] }
zbus = { version = "5.5.0", default-features = false, features = ["tokio"]}
